# Imagina

./: ArbitraryPrecision.h  CLI.cpp  CLI.h  CMakeLists.txt  Computation.cpp  Evaluator.cpp  File.cpp  FloatExp.h  FloatExpVector4.h  FractalContext.cpp  GLUtils.cpp  GLUtils.h  HInfLAEvaluator.cpp  HInfLAEvaluator.h  Includes.h  LinuxCompat.h  LinuxStubs.cpp  Overlay.cpp  Overlay.h  PORTING.md  PlatformDependent.cpp  Render.cpp  Types.h  Vector4.h  main.cpp  main_linux.cpp
